--- a/SevenRMart/test-output/index.html
+++ b/SevenRMart/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--1700438722\testng-customsuite.xml</span>
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse-906491142\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.obsquara.SevenRMart.testscript.ManagerSliderTest" class="method navigator-link" hash-for-method="entersliderinformationinmanagersliderpage">entersliderinformationinmanagersliderpage</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.obsquara.SevenRMart.testscript.ManageOfferCodeTest" class="method navigator-link" hash-for-method="VerifyUserAbletoDeleteOfferCode">VerifyUserAbletoDeleteOfferCode</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -122,45 +122,33 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.obsquara.SevenRMart.testscript.ManagerSliderTest</span>
+              <span class="class-name">com.obsquara.SevenRMart.testscript.ManageOfferCodeTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="entersliderinformationinmanagersliderpage">
-                  </a> <!-- entersliderinformationinmanagersliderpage -->
-                  <span class="method-name">entersliderinformationinmanagersliderpage</span>
-                  <div class="stack-trace">org.openqa.selenium.InvalidArgumentException: invalid argument
-  (Session info: chrome=117.0.5938.92)
+                  <a name="VerifyUserAbletoDeleteOfferCode">
+                  </a> <!-- VerifyUserAbletoDeleteOfferCode -->
+                  <span class="method-name">VerifyUserAbletoDeleteOfferCode</span>
+                  <div class="stack-trace">org.openqa.selenium.UnhandledAlertException: unexpected alert open: {Alert text : Do you want to delete this Offer?}
+  (Session info: chrome=117.0.5938.92): Do you want to delete this Offer?
 Build info: version: &apos;4.10.0&apos;, revision: &apos;c14d967899&apos;
 System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.8&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [3ac26b9d03043ad7b7fdcbdce304cd9a, clickElement {id=DBA4949565EAE274AC40763B10804639_element_86}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 117.0.5938.92, chrome: {chromedriverVersion: 116.0.5845.96 (1a3918166880..., userDataDir: C:\Users\user\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50405}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:50405/devtoo..., se:cdpVersion: 117.0.5938.92, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (3ac26b9d03043ad7b7fdcbdce304cd9a)] -&gt; xpath: //input[@id=&apos;main_img&apos;]]
-Session ID: 3ac26b9d03043ad7b7fdcbdce304cd9a
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
-	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:499)
-	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:480)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:199)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:132)
+Command: [74d0cd5e232471d81e7adf66973a03bf, getElementText {id=B6F9653EA903F20F4FECE3384BD9502D_element_109}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 117.0.5938.92, chrome: {chromedriverVersion: 116.0.5845.96 (1a3918166880..., userDataDir: C:\Users\user\AppData\Local...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:63709}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:63709/devtoo..., se:cdpVersion: 117.0.5938.92, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on windows (74d0cd5e232471d81e7adf66973a03bf)] -&gt; xpath: //table[contains(@class,&apos;table table-bordered table-hover table-sm&apos;)]//child::td]
+Session ID: 74d0cd5e232471d81e7adf66973a03bf
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:130)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:51)
 	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:191)
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:196)
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:171)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:531)
 	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:242)
-	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:77)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)
-	at jdk.proxy2/jdk.proxy2.$Proxy16.click(Unknown Source)
-	at pages.ManageSliderPage.clickChooseImageButton(ManageSliderPage.java:53)
-	at com.obsquara.SevenRMart.testscript.ManagerSliderTest.entersliderinformationinmanagersliderpage(ManagerSliderTest.java:22)
+	at org.openqa.selenium.remote.RemoteWebElement.getText(RemoteWebElement.java:192)
+	at pages.ManageOfferCodePage.getThedeleteitems(ManageOfferCodePage.java:47)
+	at com.obsquara.SevenRMart.testscript.ManageOfferCodeTest.VerifyUserAbletoDeleteOfferCode(ManageOfferCodeTest.java:23)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -198,7 +186,7 @@ Session ID: 3ac26b9d03043ad7b7fdcbdce304cd9a
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--1700438722\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse-906491142\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -207,11 +195,11 @@ Session ID: 3ac26b9d03043ad7b7fdcbdce304cd9a
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.obsquara.SevenRMart.testscript.ManagerSliderTest&quot;&gt;
+      &lt;class name=&quot;com.obsquara.SevenRMart.testscript.ManageOfferCodeTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;entersliderinformationinmanagersliderpage&quot;/&gt;
+          &lt;include name=&quot;VerifyUserAbletoDeleteOfferCode&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.obsquara.SevenRMart.testscript.ManagerSliderTest --&gt;
+      &lt;/class&gt; &lt;!-- com.obsquara.SevenRMart.testscript.ManageOfferCodeTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -253,14 +241,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'entersliderinformationinmanagersliderpage')
-data.setCell(0, 2, 'com.obsquara.SevenRMart.testscript.ManagerSliderTest')
-data.setCell(0, 3, 3029);
+data.setCell(0, 1, 'VerifyUserAbletoDeleteOfferCode')
+data.setCell(0, 2, 'com.obsquara.SevenRMart.testscript.ManageOfferCodeTest')
+data.setCell(0, 3, 5049);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -286,20 +274,20 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.obsquara.SevenRMart.testscript.ManagerSliderTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.obsquara.SevenRMart.testscript.ManageOfferCodeTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">instilBrowser</span>
+                <span class="method-name">intializeBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">entersliderinformationinmanagersliderpage</span>
-                <span class="method-start">3320 ms</span>
+                <span class="method-name">VerifyUserAbletoDeleteOfferCode</span>
+                <span class="method-start">3729 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">driverCloseOrQuit</span>
-                <span class="method-start">6357 ms</span>
+                <span class="method-start">8794 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
