--- a/SevenRMart/test-output/old/Default suite/classes.html
+++ b/SevenRMart/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.obsquara.SevenRMart.testscript.ManageOfferCodeTest</td>
+<td>com.obsquara.SevenRMart.testscript.AdminUsersTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyUserAbletoDeleteOfferCode</td>
+<td>verifyUserCreatedSuccessfullyUserDetailsinAdminUserPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
