--- a/SevenRMart/test-output/old/Default suite/methods-alphabetical.html
+++ b/SevenRMart/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9ada3">  <td>23/10/02 08:35:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageOfferCodeTest.VerifyUserAbletoDeleteOfferCode()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManageOfferCodeTest@145f66e3]">VerifyUserAbletoDeleteOfferCode</td> 
-  <td>main@1606304070</td>   <td></td> </tr>
-<tr bgcolor="73d990">  <td>23/10/02 08:35:51</td>   <td>5065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManageOfferCodeTest@145f66e3]">&lt;&lt;driverCloseOrQuit</td> 
-<td>&nbsp;</td>  <td>main@1606304070</td>   <td></td> </tr>
-<tr bgcolor="73d990">  <td>23/10/02 08:35:42</td>   <td>-3727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManageOfferCodeTest@145f66e3]">&gt;&gt;intializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1606304070</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>23/10/02 23:23:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverCloseOrQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.AdminUsersTest@4c371370]">&lt;&lt;driverCloseOrQuit</td> 
+<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>23/10/02 23:23:28</td>   <td>-8274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.AdminUsersTest@4c371370]">&gt;&gt;intializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="e6a798">  <td>23/10/02 23:23:32</td>   <td>-4431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminUsersTest.verifyUserCreatedSuccessfullyUserDetailsinAdminUserPage()[pri:0, instance:com.obsquara.SevenRMart.testscript.AdminUsersTest@4c371370]">verifyUserCreatedSuccessfullyUserDetailsinAdminUserPage</td> 
+  <td>main@2044215423</td>   <td></td> </tr>
 </table>
