--- a/SevenRMart/test-output/old/Default suite/methods.html
+++ b/SevenRMart/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="908cc0">  <td>23/10/03 17:27:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.CatagoryTest@4c371370]">&lt;&lt;driverQuit</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="e6a798">  <td>23/10/03 17:27:18</td>   <td>-3328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CatagoryTest.verifyAbleToDeleteTheItemInCateogryList()[pri:0, instance:com.obsquara.SevenRMart.testscript.CatagoryTest@4c371370]">verifyAbleToDeleteTheItemInCateogryList</td> 
-  <td>main@2044215423</td>   <td></td> </tr>
-<tr bgcolor="908cc0">  <td>23/10/03 17:27:14</td>   <td>-6770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.CatagoryTest@4c371370]">&gt;&gt;intializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2044215423</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>23/10/04 21:40:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.LogoutTest@2a3b5b47]">&gt;&gt;intializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@197964393</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>23/10/04 21:40:47</td>   <td>5397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:com.obsquara.SevenRMart.testscript.LogoutTest@2a3b5b47]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="73d990">  <td>23/10/04 21:40:47</td>   <td>5310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutTest.verifyTheAdminLogout()[pri:0, instance:com.obsquara.SevenRMart.testscript.LogoutTest@2a3b5b47]">verifyTheAdminLogout</td> 
+  <td>main@197964393</td>   <td></td> </tr>
 </table>
