--- a/SevenRMart/test-output/old/Suite/classes.html
+++ b/SevenRMart/test-output/old/Suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.obsquara.SevenRMart.testscript.ManagerSliderTest</td>
+<td>com.obsquara.SevenRMart.testscript.LogoutTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>entersliderinformationinmanagersliderpage</td>
+<td>verifyTheAdminLogout</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -28,7 +28,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>driverQuit</td>
+<td>browserQuit</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
