--- a/SevenRMart/test-output/old/Suite/methods-alphabetical.html
+++ b/SevenRMart/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94d6b9">  <td>23/10/03 08:35:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.driverQuit()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManagerSliderTest@60f00693]">&lt;&lt;driverQuit</td> 
-<td>&nbsp;</td>  <td>main@372469954</td>   <td></td> </tr>
-<tr bgcolor="a06a77">  <td>23/10/03 08:35:39</td>   <td>-4434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerSliderTest.entersliderinformationinmanagersliderpage()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManagerSliderTest@60f00693]">entersliderinformationinmanagersliderpage</td> 
-  <td>main@372469954</td>   <td></td> </tr>
-<tr bgcolor="94d6b9">  <td>23/10/03 08:35:36</td>   <td>-7817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser()[pri:0, instance:com.obsquara.SevenRMart.testscript.ManagerSliderTest@60f00693]">&gt;&gt;intializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@372469954</td>   <td></td> </tr>
+<tr bgcolor="bbfd87">  <td>23/10/04 22:17:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.browserQuit(org.testng.ITestResult)[pri:0, instance:com.obsquara.SevenRMart.testscript.LogoutTest@28cda624]">&lt;&lt;browserQuit</td> 
+<td>&nbsp;</td>  <td>main@79438382</td>   <td></td> </tr>
+<tr bgcolor="bbfd87">  <td>23/10/04 22:17:33</td>   <td>-10674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.intializeBrowser(java.lang.String)[pri:0, instance:com.obsquara.SevenRMart.testscript.LogoutTest@28cda624]">&gt;&gt;intializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@79438382</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/10/04 22:17:41</td>   <td>-3479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutTest.verifyTheAdminLogout(java.lang.String)[pri:0, instance:com.obsquara.SevenRMart.testscript.LogoutTest@28cda624]">verifyTheAdminLogout</td> 
+  <td>main@79438382</td>   <td></td> </tr>
 </table>
